products-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
  namespace: products
  labels:
    app: products-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
      - name: products-api
        image: zyozmen/products-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "768Mi"
            cpu: "750m"
