backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api-backend
  namespace: default
  labels:
    app: products-api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
      - name: api-container
        image: us-central1-docker.pkg.dev/mi-proyecto-gcp/repo/products-api:v1.0.0
        ports:
        - containerPort: 8080
          name: http-api
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http-api
    protocol: TCP
  selector:
    app: products-api
