products-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
  namespace: products
spec:
  type: LoadBalancer
  selector:
    app: products-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
